--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body{
     font-size: .9rem;
     letter-spacing: .08rem;
     background-color: rgba(57, 63, 70, .9);
+    font-weight: 700;
+    text-transform: uppercase;
 }
 .navbar-nav li{
     padding-right: .8rem;
@@ -77,10 +79,14 @@ button:active, button:focus{
 .caption{
     z-index: 1;
     top: 40%;
+    position: absolute;
+    text-align: center;
 }
 .btn{
     border-width: medium;
     padding: .5rem 1.2rem;
+    text-transform: uppercase;
+    border-radius: 0;
 }
 /*============= ABOUT SECTION =============*/
 
@@ -91,18 +97,24 @@ button:active, button:focus{
     margin-top: -62px;
     display: block;
 }
-
+.heading{
+    text-transform: uppercase;
+    font-weight: 700;
+}
 .heading-underline{
     width: 3rem;
     height: .25rem;
     background-color: #00b3ff;
+    margin: 1.5rem auto;
 } 
 .about .fas{
     color: #00b3ff;
 }
 
 /*============= PORTFOLIO SECTION =============*/
-
+.portfolio-item{
+    overflow: hidden;
+}
 .portfolio-item img{
     transition: transform .4s ease;
 }
@@ -110,28 +122,78 @@ button:active, button:focus{
     cursor: zoom-in;
     transform: scale(1.1);
 }
+.example-image{
+    width: 100%;
+}
 
 /*============= TESTIMONIALS SECTION =============*/
-
-
-
-/*============= CONTACT SECTION =============*/
-
-
-/*-- Contact Form --*/
-
-
-/*============= MEDIA QUERIES =============*/
-
-/* Medium (md) devices (tablets, 768px and under) */
-@media (max-width: 767px){
-    .caption{
-        top: 35%;
+.card h5 {
+    color: #00b3ff;
+ }
+ .card p, .footer p {
+    font-size: 1.1rem;
+ }
+ 
+ /*============= CONTACT SECTION =============*/
+ 
+ .footer {
+    background-color: #565b61;
+ }
+ .footer img {
+    height: 2rem;
+ }
+ .footer a {
+    color: white;
+ }
+ .footer .fab {
+    font-size: 1.6rem;
+ }
+ .footer .fab:hover {
+    color: #00b3ff;
+ }
+ ul.social {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+ }
+ ul.social li {
+    display: inline;
+    padding-right: .8rem;
+ }
+ /*-- Contact Form --*/
+ .form-group {
+    margin-bottom: 1.3rem;
+ }
+ .form-control {
+    background: #53595f;
+    border-radius: 0;
+    border: .15rem solid #666b71;
+    color: white!important;
+    font-size: 1.1rem;
+ }
+ .form-control:focus {
+    background: #53595f;
+    border: .15rem solid #666b71;
+ }
+ .form-group input::placeholder,
+ .form-group textarea::placeholder {
+    color: #b2b5b8;
+ }
+ hr.socket {
+    border-top: .2rem solid #666b71;
+ }
+ 
+ /*============= MEDIA QUERIES =============*/
+ 
+ /* Medium (md) devices (tablets, 768px and under) */
+ @media (max-width: 767px) {
+    .caption {
+       top:35%;
     }
-    .caption h1{
-        font-size: 1.8rem;
+    .caption h1 {
+       font-size: 1.8rem;
     }
-}
+ }
 
 /*============ BOOTSTRAP BREAK POINTS:
 
